test/expected/explain_la_nn-error.out
explain [i,i]
           ^
12: error: "i" previously captured
